--- a/index.html
+++ b/index.html
@@ -1036,8 +1036,8 @@
 
   <ul>
 <li>Mar. 2022: 2 papers are accepted by CVPR 2022</li>
-<li>Feb. 2022: Excellent Doctorial Dissertation Award of CIE.</li>
 <li>Dec. 2021: 1 paper is accepted by MIA.</li>
+<li>Nov. 2021: 1 paper has been recognized as ESI Highly Cited Paper.</li>
 <li>Nov. 2021: Excellent Doctorial Dissertation Nomination Award of CSIG.</li>
 <li>Oct. 2021: 1 paper is accepted by PR and 1 paper is accepted by BMVC 2021.</li>
 <li>Sep. 2021: 1 paper is accepted by IJCV.</li>
