--- a/index.html
+++ b/index.html
@@ -1035,9 +1035,11 @@
 <div class="col-12 col-lg-8">
 
   <ul>
+<li>Apr. 2022: We won the fourth place in NTIRS2022 HDR Challenge (Track1).</li>
+<li>Apr. 2022: We won the third place in NTIRS2022 HDR Challenge (Track2).</li>
 <li>Mar. 2022: 2 papers are accepted by CVPR 2022</li>
 <li>Dec. 2021: 1 paper is accepted by MIA.</li>
-<li>Nov. 2021: 1 paper has been recognized as ESI Highly Cited Paper.</li>
+<li>Nov. 2021: 1 paper is recognized as ESI Highly Cited Paper.</li>
 <li>Nov. 2021: Excellent Doctorial Dissertation Nomination Award of CSIG.</li>
 <li>Oct. 2021: 1 paper is accepted by PR and 1 paper is accepted by BMVC 2021.</li>
 <li>Sep. 2021: 1 paper is accepted by IJCV.</li>
