--- a/index.html
+++ b/index.html
@@ -1035,6 +1035,7 @@
 <div class="col-12 col-lg-8">
 
   <ul>
+<li>Aug. 2022: Program Committee (PC) Member for AAAI 2023.</li>
 <li>Apr. 2022: We won the fourth place in NTIRE2022 HDR Challenge (Track1).</li>
 <li>Apr. 2022: We won the third place in NTIRE2022 HDR Challenge (Track2).</li>
 <li>Mar. 2022: 2 papers are accepted by CVPR 2022</li>
