--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>Qingsen Yan is currently a Postdoctoral Researcher at the University of Adelaide, working with Prof. Qinfeng (Javen) Shi. He received a PhD in Computer Science from Northwestern Polytechnical University (Xi’an, China) under the supervision of Prof. Yanning Zhang. During Jan. 2018 to Jan. 2019, he was a visiting scholar at Australian Centre for Visual Technologies, University of Adelaide, under the supervision of Prof. Ian Reid and Prof. Qinfeng (Javen) Shi.</p>
+      <p>Qingsen Yan is currently a Professor in School of Computer Science at Northwestern Polytechnical University, Xi’an, China. He was a Postdoctoral Researcher at the University of Adelaide, working with Prof. Qinfeng (Javen) Shi. He received a PhD in Computer Science from Northwestern Polytechnical University (Xi’an, China) under the supervision of Prof. Yanning Zhang. During Jan. 2018 to Jan. 2019, he was a visiting scholar at Australian Centre for Visual Technologies, University of Adelaide, under the supervision of Prof. Ian Reid and Prof. Qinfeng (Javen) Shi.</p>
 
     </div>
 
@@ -1035,6 +1035,7 @@
 <div class="col-12 col-lg-8">
 
   <ul>
+<li>Sep. 2022: 2 papers are accepted by ACCV 2022</li>
 <li>Aug. 2022: Program Committee (PC) Member for AAAI 2023.</li>
 <li>Apr. 2022: We won the fourth place in NTIRE2022 HDR Challenge (Track1).</li>
 <li>Apr. 2022: We won the third place in NTIRE2022 HDR Challenge (Track2).</li>
