--- a/index.html
+++ b/index.html
@@ -1035,6 +1035,8 @@
 <div class="col-12 col-lg-8">
 
   <ul>
+<li>Feb. 2023: 1 paper is accepted by PR</li>
+<li>Jan. 2023: 1 paper is accepted by IEEE TIP</li>
 <li>Sep. 2022: 2 papers are accepted by ACCV 2022</li>
 <li>Aug. 2022: Program Committee (PC) Member for AAAI 2023.</li>
 <li>Apr. 2022: We won the fourth place in NTIRE2022 HDR Challenge (Track1).</li>
