--- a/index.html
+++ b/index.html
@@ -1035,6 +1035,7 @@
 <div class="col-12 col-lg-8">
 
   <ul>
+<li>Mar. 2023: 2 papers are accepted by CVPR 2023</li>
 <li>Feb. 2023: 1 paper is accepted by PR</li>
 <li>Jan. 2023: 1 paper is accepted by IEEE TIP</li>
 <li>Sep. 2022: 2 papers are accepted by ACCV 2022</li>
